[package]
name = "mbox-reader"
version = "0.2.0"
authors = ["Dirkjan Ochtman <dirkjan@ochtman.nl>"]
description = "Lazy liberal mbox (RFC 4155) parser"
documentation = "https://docs.rs/mbox-reader"
keywords = ["file", "email", "mbox"]
categories = ["email", "filesystem", "parser-implementations"]
homepage = "https://github.com/djc/mbox-reader"
repository = "https://github.com/djc/mbox-reader"
license = "MIT/Apache-2.0"
edition = "2018"

[dependencies]
memmap = "0.7"
